fix spacing

--- a/frontend/src/Components/Base/Base.module.scss
+++ b/frontend/src/Components/Base/Base.module.scss
@@ -8,6 +8,6 @@
     display: flex;
     // display: grid;
     justify-content: center;
-    align-items: center;
+    // align-items: center;
     background-color: variables.$background-colour;
 }
